src/objects/Cancellation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cancellations</relationshipLabel>
        <relationshipName>Cancellations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Price</fullName>
                </value>
                <value>
                <fullName>Editorial</fullName>
                </value>
                <value>
                <fullName>Political</fullName>
                </value>
                <value>
                <fullName>Lack of Content</fullName>
                </value>
                <value>
                <fullName>App performance</fullName>
                </value>
                <value>
                <fullName>Competitor</fullName>
                </value>
                <value>
                <fullName>No compatible devices</fullName>
                </value>
                <value>
                <fullName>Lack of Time</fullName>
                </value>
                <value>
                <fullName>Functionality</fullName>
                </value>
                <value>
                <fullName>Product switch</fullName>
                </value>
                <value>
                <fullName>Not known</fullName>
                </value>
                <value>
                <fullName>Deceased</fullName>
                </value>
                <value>
                <fullName>Ill health</fullName>
                </value>
                <value>
                <fullName>Apple News</fullName>
                </value>
                <value>
                <fullName>Duplicate Subscription</fullName>
                </value>
                <value>
                <fullName>Change of Payment Schedule</fullName>
                </value>
                <value>
                <fullName>Look and feel</fullName>
                </value>
                <value>
                <fullName>Download</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Status__c</fullName>
        <label>Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Completed</fullName>
                </value>
                <value>
                <fullName>Pending</fullName>
                </value>
                <value>
                <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Type__c</fullName>
        <label>Cancellation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Soft Cancellation</fullName>
                </value>
                <value>
                <fullName>Hard Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancelled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancelled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cancellations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPP_Transaction_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MPP Transaction History</label>
        <referenceTo>MPP_Transaction_History__c</referenceTo>
        <relationshipLabel>Cancellations</relationshipLabel>
        <relationshipName>Cancellations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Details__c</fullName>
        <label>Reason Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>Free Trial</fullName>
                </value>
                <value>
                <fullName>Price Increase</fullName>
                </value>
                <value>
                <fullName>Brexit</fullName>
                </value>
                <value>
                <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cancellation</label>
    <nameField>
        <displayFormat>CAN-{0000}</displayFormat>
        <label>Cancellation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>